@@ -1,4 +1,5 @@
 Development
+    Marked cancelled items as not opened
     Fix problem with request_*_value methods using wrong dest
     Handle Cancel signal from player
     Change request calls to use unique (based on controlid) object names
